# gdal

./: .gitmodules  CHANGES.md  Cargo.toml
.github/workflows/: ci.yml
gdal-src/: Cargo.toml  build.rs
gdal-src/src/: lib.rs
gdal-sys/: build.rs
src/vector/: layer.rs
