[package]
name = "gdal-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proj-sys = { version = "0.23.2", features = ["bundled_proj"] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }

[build-dependencies]
cmake = "0.1.50"
